HVAC Backup 2/objects/Calculate_Depreciation_Value__mdt.object
<CustomObject>
    <fields>
        <fullName>Depreciation_Percentage__c</fullName>
        <label>Depreciation Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Year__c</fullName>
        <label>From Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Year__c</fullName>
        <label>To Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Calculate Depreciation Value</label>
    <pluralLabel>Calculate Depreciation Values</pluralLabel>
</CustomObject>